# python-project-template

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  notes.md  pyproject.toml  requirements-dev.txt
src/: example.py
test/: test_my_project.py
