[project]
name = "example-proj"
version = "0.0.0"
description = "An example template for a project"
readme = "README.md"
license = "MIT"
license-files = [ "LICENSE.md" ]

maintainers = [
  { name = "Max Musterman", email = "max@example.com" },
]
authors = [
  { name = "Max Musterman", email = "max@example.com" },
]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [  ]
optional-dependencies.dev = [
  "ipython",
  "pyright",
  "pytest",
  "ruff",
  "pre-commit",
]
gui-scripts.example-cli = "example:main_gui"

[tool.ruff]

[tool.pyright]
include = [
  "src",
  "test",
]
exclude = [
  ".*",
  "**/__pycache__",
]
typeCheckingMode = "standard"
